removes fixed styling, adds scrollbar

--- a/grantly/src/App.scss
+++ b/grantly/src/App.scss
@@ -18,22 +18,22 @@ $color: red;
   text-align: right;
 }
 
-// /* Scrollbar styles */
-// ::-webkit-scrollbar {
-//   width: 12px;
-//   height: 12px;
-// }
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
 
-// ::-webkit-scrollbar-track {
-//   border: 1px solid #3db8b3;
-//   border-radius: 10px;
-// }
+::-webkit-scrollbar-track {
+  border: 1px solid #3db8b3;
+  border-radius: 10px;
+}
 
-// ::-webkit-scrollbar-thumb {
-//   background: #3db8b3;
-//   border-radius: 10px;
-// }
+::-webkit-scrollbar-thumb {
+  background: #3db8b3;
+  border-radius: 10px;
+}
 
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #88ba1c;
-// }
+::-webkit-scrollbar-thumb:hover {
+  background: #88ba1c;
+}
